--- a/.gitignore
+++ b/.gitignore
@@ -56,5 +56,8 @@ pids
 # Development database
 *.db
 
+# Development environment
+.direnv
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
