--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.14",
-    "@eslint/eslintrc": "^3.3.3",
-    "@eslint/js": "^9.39.2",
     "@faker-js/faker": "^9.9.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.9",
@@ -60,12 +58,8 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
-    "eslint": "^9.38.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
     "globals": "^17.3.0",
     "jest": "^30.1.1",
-    "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.7",
     "supertest": "^7.2.2",
@@ -73,8 +67,7 @@
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript": "^5.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
