--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "license": "GPL-3.0-only",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "seed": "ts-node src/database/seed.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "biome format --write ./src ./test",
+    "format:check": "biome format ./src ./test",
+    "lint": "biome lint ./src ./test",
+    "lint:fix": "biome lint --write ./src ./test",
+    "check": "biome check ./src ./test",
+    "check:fix": "biome check --write ./src ./test",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
