--- a/biome.json
+++ b/biome.json
@@ -12,6 +12,19 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "style": {
+        "noRestrictedImports": {
+          "level": "error",
+          "options": {
+            "patterns": [
+              {
+                "group": ["../**"],
+                "message": "Use absolute aliases (@/...) instead of relative parent imports."
+              }
+            ]
+          }
+        }
+      },
       "correctness": {
         "noUnusedVariables": "error"
       }
