--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-only",
   "scripts": {
     "build": "nest build",
-    "seed": "ts-node src/database/seed.ts",
+    "seed": "ts-node -r tsconfig-paths/register src/database/seed.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
