--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [lint-and-format]
     strategy:
       matrix:
         node-version: [22.x]
