--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Pull Request Checks
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 
 jobs:
   lint-and-format:
+    name: Lint and Format
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,6 +23,7 @@ jobs:
         run: biome ci ./src ./test
 
   test:
+    name: Test and Collect Coverage
     runs-on: ubuntu-latest
     needs: [lint-and-format]
     strategy:
@@ -36,10 +38,15 @@ jobs:
         cache: 'npm'
     - name: Install Dependencies
       run: npm ci
-    - name: Unit Tests
-      run: npm test
+    - name: Run Tests and Collect Coverage
+      run: npm run test:cov
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
+    name: Build
     runs-on: ubuntu-latest
     needs: [lint-and-format]
     strategy:
