--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
       "^@/(.*)$": "<rootDir>/src/$1"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "src/**/*.(t|j)s"
     ],
     "coverageDirectory": "coverage",
     "testEnvironment": "node"
